--- a/cle2/css/style.css
+++ b/cle2/css/style.css
@@ -7,7 +7,7 @@ nav {
     background-color: #86CBE8;
 
     display: flex;
-    justify-content: space-between;;
+    justify-content: space-between;
     padding: 10px 10px;
 }
 
@@ -112,7 +112,7 @@ footer img {
 
 .row p {
     padding-left: 17px;
-    font-size: 0,8rem;
+    font-size: 1rem;
 }
 
 .row-envelope p {
@@ -131,3 +131,27 @@ footer img {
     display: flex;
     align-items: end;
 }
+
+.privacy a {
+    font-size: 0.8rem;
+}
+
+.map {
+    display: flex;
+    align-items: center;
+}
+
+.login{
+    background-color: #87cce8;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    justify-content: space-between;
+}
+
+.whitebox{
+    background-color: white;
+    height: 100vh;
+    width: 30vw;
+}
+
