--- a/cle2/css/style.css
+++ b/cle2/css/style.css
@@ -147,6 +147,7 @@ footer img {
     align-items: center;
     height: 100vh;
     justify-content: space-between;
+    padding: 0px;
 }
 
 .whitebox{
