--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,21 @@ footer img {
 .login_form{
 
 }
+
+/*Contact*/
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+input{
+    margin-left: 30px;
+}
+
+label {
+    padding-top: 10px;
+}
+
