--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,7 @@ footer img {
     flex: 1;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .login_logo{
@@ -172,5 +173,30 @@ footer img {
 }
 
 .login_form{
-
+    height: 30vh;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    color: #0d386b;
+    flex-direction: column;
 }
+
+.login_form input{
+    border: 2px solid #86CBE8;
+    border-radius: 15px;
+    width: 100%;
+    padding: 5px;
+}
+
+.input{
+    width: 80%;
+}
+
+h2{
+    margin: 10px;
+}
+
+.error{
+    color: #ff0000;
+}
+
