--- a/css/style.css
+++ b/css/style.css
@@ -202,18 +202,18 @@ h2{
 
 /*Contact*/
 
-form{
+.contact_form{
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
 
-input{
+.contact_form input{
     margin-left: 30px;
 }
 
-label {
+.contact_form label {
     padding-top: 10px;
 }
 
