--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,71 @@ h2{
     color: #ff0000;
 }
 
+form button{
+    border: none;
+    color: white;
+    width: 200px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: #86CBE8;
+    font-size: 1.3rem;
+}
+
+.register{
+    text-decoration: none;
+    margin-top: 10px;
+    font-size: 0.8rem;
+}
+
+/*register*/
+.login{
+    background-color: #87cce8;
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    padding: 0px;
+}
+
+.whitebox{
+    background-color: white;
+    height: 100vh;
+    width: 30vw;
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login_logo{
+    display: flex;
+    flex: 2;
+    justify-content: center;
+}
+
+.login_form{
+    height: 30vh;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    color: #0d386b;
+    flex-direction: column;
+}
+
+.login_form input{
+    border: 2px solid #86CBE8;
+    border-radius: 15px;
+    width: 100%;
+    padding: 5px;
+}
+
+.input{
+    width: 80%;
+}
+
+h2{
+    margin: 10px;
+}
+
 /*Contact*/
 
 .contact_form{
