--- a/css/style.css
+++ b/css/style.css
@@ -267,21 +267,30 @@ h2{
 
 /*Contact*/
 
+.main-contact {
+    padding: 50px;
+}
+
+.main-contact h1 {
+    margin: 0px;
+}
+
 .contact_form{
     color: #0d386b;
 
-    height: 80vh;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    justify-content: space-between;
 }
 
 .contact_form input{
-    margin-left: 30px;
     border: 2px solid #86CBE8;
     border-radius: 15px;
-    padding: 5px;
+    width: 250px;
+;
 }
 
 .contact_form label {
@@ -291,6 +300,14 @@ h2{
 .contact_form textarea {
     border: 2px solid #86CBE8;
     border-radius: 15px;
-    padding: 5px;
+    width: 250px;
+    height: 150px;
 }
+
+.contact_css {
+    display: flex;
+    justify-content: space-between;
+    width: 25vw;
+}
+
 
