--- a/css/style.css
+++ b/css/style.css
@@ -217,15 +217,16 @@ form button{
 }
 
 /*register*/
-.login{
+.register{
     background-color: #87cce8;
     display: flex;
     align-items: center;
     height: 100vh;
     padding: 0px;
+    margin: 0px;
 }
 
-.whitebox{
+.whitebox_register{
     background-color: white;
     height: 100vh;
     width: 30vw;
@@ -235,13 +236,13 @@ form button{
     align-items: center;
 }
 
-.login_logo{
+.register_logo{
     display: flex;
     flex: 2;
     justify-content: center;
 }
 
-.login_form{
+.register_form{
     height: 30vh;
     width: 80%;
     display: flex;
@@ -250,21 +251,18 @@ form button{
     flex-direction: column;
 }
 
-.login_form input{
+.register_form input{
     border: 2px solid #86CBE8;
     border-radius: 15px;
     width: 100%;
     padding: 5px;
 }
 
-.input{
-    width: 80%;
+.login_button{
+    text-decoration: none;
+    margin-top: 10px;
+    font-size: 0.8rem;
 }
-
-h2{
-    margin: 10px;
-}
-
 /*Contact*/
 
 .contact_form{
