form validation login

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ form button{
     font-size: 1.3rem;
 }
 
-.register{
+.register_button{
     text-decoration: none;
     margin-top: 10px;
     font-size: 0.8rem;
