Contact page base

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,15 @@ form button{
 .register{
     text-decoration: none;
     margin-top: 10px;
-    font-size: 0.8rem;
+
+    text-align: center;
+    border: none;
+    color: white;
+    width: 200px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: #86CBE8;
+    font-size: 1.3rem;
 }
 
 /*register*/
