--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,7 @@ form button{
     height: 30px;
     background-color: #FFFFFF;
     font-size: 1rem;
+
 }
 
 .whitebox a:hover {
@@ -246,7 +247,7 @@ form button{
     flex: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
+
 }
 
 .register_logo{
@@ -256,12 +257,13 @@ form button{
 }
 
 .register_form{
-    height: 30vh;
+    /*height: 100vh;*/
     width: 80%;
     display: flex;
     align-items: center;
     color: #0d386b;
     flex-direction: column;
+    justify-content: center;
 }
 
 .register_form input{
@@ -274,16 +276,16 @@ form button{
 .login_button{
     text-decoration: none;
     margin-top: 10px;
-
+    border-bottom: 2px solid #fff;
     text-align: center;
     color: #86CBE8;
-    width: 160px;
-    height: 30px;
     background-color: #FFFFFF;
     font-size: 1rem;
+    transition: 0.1s ease;
 }
 
 .whitebox_register a:hover {
+    transition: 0.3s ease;
     border-bottom: 2px solid #86CBE8;
 }
 
