1 calendar ipv 2 oude data nog verwijderen user id word doorgestuurd

--- a/css/style.css
+++ b/css/style.css
@@ -337,5 +337,7 @@ form button{
     transition: 0.3s ease;
 }
 
-
-
+/*Appointment*/
+.date-input::-webkit-calendar-picker-indicator{
+    display: none;
+}
