--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,6 @@ footer {
     color: #FFFFFF;
     display: flex;
     justify-content: space-between;
-    /*position: fixed;*/
-    /*bottom: 0;*/
-    /*width: 99%;*/
 }
 
 footer img {
@@ -142,6 +139,8 @@ footer img {
 
 .privacy a {
     font-size: 0.8rem;
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 .map {
@@ -155,8 +154,66 @@ footer img {
 .main-create {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
+.date {
+    height: 20vh;
+    width: 50vw;
+    color: #0d386b;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.date input {
+    color: #0d386b;
+    border: 2px solid #86CBE8;
+    border-radius: 15px;
+    width: 200px;
+
+    text-align: center;
+}
+
+.time-form {
+    height: 20vh;
+    width: 50vw;
+    color: #0d386b;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.time-form select {
+    color: #0d386b;
+    border: 2px solid #86CBE8;
+    border-radius: 15px;
+    width: 200px;
+}
+
+.time-form textarea {
+    border: 2px solid #86CBE8;
+    border-radius: 15px;
+    width: 200px;
+    height: 50px;
+}
+
+.time-text {
+    display: flex;
+    flex-direction: column;
+}
+
+
+/* Read */
+.main-read {
+    height: 60vh;
+}
 
 /* Contact */
 
@@ -337,7 +394,19 @@ form button{
     transition: 0.3s ease;
 }
 
-/*Appointment*/
+/* Privacy */
+.privacy-main {
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+}
+
+.privacy-main p {
+    width: 70vw
+}
+
+
+/* Appointment */
 .date-input::-webkit-calendar-picker-indicator{
     display: none;
 }
